# Pympp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh  run_server.py
doc/: usage.md
doc/api/: api.md
doc/ui/: fr1.drawio  fr2.drawio  fr3.drawio  fr4.drawio  fr5.drawio  mem.drawio  reg.drawio  st1.drawio  st2.drawio  ui.drawio  ui.md
pymipspipeline/: base.py  behaviors.py  cpu.py  isa.py  pipeline.py
pympp/: __init__.py  base.py  behaviors.py  cpu.py  isa.py  log.py  pipeline.py
pympp/api/: __init__.py  app.py  assembler.py  config.py  exercise.py  quiz.py  schema.py
pympp/db/: __init__.py  base.py  config_models.py  config_repo.py  exercise_models.py  exercise_repo.py  models.py  sqlite_repo.py
pympp/mips/: __init__.py  assembler.py  isa.py  set.py
pympp/util/: type.py
ui/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/public/: usage.html
ui/public/resources/: exercise_instructions.json  instructions.json
ui/public/resources/descriptions/: jalx.md
ui/public/resources/examples/: add.asm  beq.asm  jal.asm  jr.asm  lui.asm  lw.asm  ori.asm  sub.asm  sw.asm
ui/src/: App.tsx  config.ts  index.css
ui/src/api/: client.ts
ui/src/components/: AdminPanel.tsx  ConfigPanel.tsx  Controls.tsx  ExerciseMode.tsx  InstructionInput.tsx  InstructionReference.tsx  MemoryView.tsx  PipelineVisualizer.tsx  QuizMode.tsx  RegisterFile.tsx
ui/src/types/: schema.ts
