[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pympp"
version = "0.1.0"
description = "A Python MIPS Pipeline Simulator with Visualization Interface"
readme = "README.md"
authors = [
    { name = "User", email = "user@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[tool.setuptools]
packages = ["pympp"]
